--- a/app/assets/stylesheets/drawer.sass
+++ b/app/assets/stylesheets/drawer.sass
@@ -23,21 +23,24 @@
     filter: grayscale(100%)
     display: block
     margin: auto
-  a
+  .truncated-note
     display: block
     text-decoration: none
     color: #757575
     border-bottom: 1px solid #DEDEDE
     padding: 10px
+    word-break: break-word
   .new_note_link_container
     display: flex
     flex-direction: row
     justify-content: flex-end
+    border-bottom: 1px solid #DEDEDE
     .new_note_link
       text-decoration: none
       color: #212121
       padding-top: 10px
       padding-right: 10px
+      padding-bottom: 8px
 #main
   position: absolute
   top: 0
