--- a/app/assets/stylesheets/drawer.sass
+++ b/app/assets/stylesheets/drawer.sass
@@ -12,29 +12,44 @@
   top: 0
   left: 0
   height: 100%
-  width: 250px
+  width: 275px
   max-width: 100%
   border-right: 1px solid #DEDEDE
   transition: all .35s ease
   @media only screen and (max-width: 800px)
-    left: -250px
+    left: -275px
   img
     max-width: 75%
     filter: grayscale(100%)
     display: block
     margin: auto
   .truncated-note
-    display: block
+    display: flex
     text-decoration: none
     color: #757575
     border-bottom: 1px solid #DEDEDE
     padding: 10px
-    word-break: break-word
-  .new_note_link_container
+    border-left: 4px solid #fff
+    &.active
+      border-left: 4px solid #212121
+    .time_ago
+      margin-top: 16px
+      margin-right: 16px
+    .note
+      word-break: break-word
+      .temp_note
+        color: rgba(117,117,117, .6)
+  .new_note_search_container
     display: flex
     flex-direction: row
-    justify-content: flex-end
     border-bottom: 1px solid #DEDEDE
+    .flex
+      flex: 1
+      input
+        margin-top: 10px
+        border: 0
+        margin-left: 10px
+        width: calc(100% - 10px)
     .new_note_link
       text-decoration: none
       color: #212121
@@ -44,9 +59,9 @@
 #main
   position: absolute
   top: 0
-  left: 250px
+  left: 276px
   height: 100%
-  width: calc(100% - 250px)
+  width: calc(100% - 276px)
   transition: all .35s ease
   @media only screen and (max-width: 800px)
     left: 0px
