--- a/app/views/layouts/_drawer.html.haml
+++ b/app/views/layouts/_drawer.html.haml
@@ -5,7 +5,8 @@
     = link_to notes_path, method: :post, class: "new_note_link" do
       %i.material-icons add
   - notes.each do |note|
-    = link_to note_path(note, search: params[:search]), class: "truncated-note #{active_note(note, params)}" do
+    = link_to note_path(note, search: params[:search]),
+        class: "truncated-note #{active_note(note, params)}" do
       .time_ago
         = time_ago_in_words note.updated_at, include_seconds: true
       .note
