--- a/app/assets/stylesheets/drawer.sass
+++ b/app/assets/stylesheets/drawer.sass
@@ -1,12 +1,27 @@
-#hamburger
+nav
   position: fixed
-  top: 30px
-  left: 15px
-  display: none
+  top: 15px
+  display: flex !important
   z-index: 10
   cursor: pointer
+  flex-direction: row
+  margin-left: 15px
+  margin-right: 15px
+  left: 276px
+  width: calc(100% - 306px)
+  transition: all .35s ease
+  .flex
+    flex: 1
+  a
+    text-decoration: none
+    color: #212121
+  #hamburger
+    display: none
   @media only screen and (max-width: 800px)
-    display: block
+    width: calc(100% - 30px)
+    left: 0
+    #hamburger
+      display: block
 #drawer
   position: fixed
   top: 0
@@ -58,7 +73,7 @@
       padding-bottom: 8px
 #main
   position: absolute
-  top: 0
+  top: 35px
   left: 276px
   height: 100%
   width: calc(100% - 276px)
