Fix haml cops. Remove extra test line

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -19,7 +19,7 @@
     = javascript_include_tag "application", "data-turbolinks-track": "reload"
   %body
     %nav
-      %i#hamburger.material-icons menu
+      %i.material-icons#hamburger menu
       .flex
       = yield(:nav)
 
