Ignore electron releases directory. Move app down away from top toolbar

--- a/app/assets/stylesheets/drawer.sass
+++ b/app/assets/stylesheets/drawer.sass
@@ -1,6 +1,6 @@
 nav
   position: fixed
-  top: 15px
+  top: 30px
   display: flex !important
   z-index: 10
   cursor: pointer
@@ -33,6 +33,7 @@ nav
   transition: all .35s ease
   overflow-y: scroll
   margin-bottom: 40px
+  padding-top: 20px
   @media only screen and (max-width: 800px)
     left: -275px
   img
@@ -85,9 +86,9 @@ nav
       padding: 8px
 #main
   position: absolute
-  top: 35px
+  top: 50px
   left: 276px
-  height: calc(100% - 35px)
+  height: calc(100% - 50px)
   width: calc(100% - 276px)
   transition: all .35s ease
   @media only screen and (max-width: 800px)
