--- a/app/assets/stylesheets/drawer.sass
+++ b/app/assets/stylesheets/drawer.sass
@@ -78,12 +78,13 @@ nav
     display: flex
     width: 100%
     flex-direction: row
-    justify-content: flex-end
     margin-bottom: 40px
     a
       color: #212121
       text-decoration: none
       padding: 8px
+    .flex
+      flex: 1
 #main
   position: absolute
   top: 50px
