--- a/app/views/layouts/_drawer.html.haml
+++ b/app/views/layouts/_drawer.html.haml
@@ -16,5 +16,7 @@
         - else
           = truncate_html standard_markdown(note), length: 90, omission: ""
   .settings_logout
+    = link_to "About", about_path
+    .flex
     = link_to "Settings", edit_user_registration_path
     = link_to "Logout", destroy_user_session_path, method: :delete
