--- a/app/views/devise/shared/_links.html.haml
+++ b/app/views/devise/shared/_links.html.haml
@@ -4,3 +4,5 @@
   = link_to "Sign up", new_registration_path(resource_name)
 - if devise_mapping.recoverable? && controller_name == "sessions"
   = link_to "Forgot your password?", new_password_path(resource_name)
+.flex
+= link_to "About", about_path, class: "devise-about-link"
