--- a/app/views/about/show.html.haml
+++ b/app/views/about/show.html.haml
@@ -1,5 +1,6 @@
 .session-container
-  = image_tag "about.png"
+  = link_to root_path do
+    = image_tag "about.png"
 
   %p
     Eighty is a simple markdown note taking app. Some of its features include
