Turn off turbolinks caching. Submit note form before leaving page

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -5,6 +5,7 @@
     = csrf_meta_tags
     = favicon_link_tag "logo.png"
     %link{ href: image_url("logo.png"), rel: "apple-touch-icon" }/
+    %meta{ content: "no-cache", name: "turbolinks-cache-control" }/
     %meta{ content: "yes", name: "mobile-web-app-capable" }/
     %meta{ content: "yes", name: "apple-mobile-web-app-capable" }/
     %meta{ content: "minimal-ui, width=device-width,
